# Suri

./: .gitignore  CLAUDE.md  pyproject.toml
scripts/: generate_models_snapshot.py
suri/: cli.py  core.py
suri/cli/: __init__.py  app.py  latex.py
suri/cli/screens/: chat.py  login.py  model_picker.py  onboarding.py
suri/core/: __init__.py  agent.py  events.py  models.py  providers.py  selection.py
suri/core/data/: models_snapshot.json
suri/core/tools/: __init__.py  numeric.py  parsing.py  symbolic.py
