[project]
name = "suri"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "langgraph",
    "deepagents",
    "langchain-ollama",
    "langchain-openai",
    "textual",
    "pydantic",
    "keyring",
    "httpx",
    "ollama",
    "openai",
    "sympy>=1.14.0",
    "antlr4-python3-runtime==4.11.*",
    "flatlatex>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["suri"]

[tool.hatch.build.targets.wheel.force-include]
"suri/core/data/models_snapshot.json" = "suri/core/data/models_snapshot.json"

[project.scripts]
suri = "suri.cli:main"

[dependency-groups]
dev = [
    "pyright",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
include = ["suri"]
venvPath = "."
venv = ".venv"
